objects/PDBCountryLookup__c.object
<CustomObject>
    <fields>
        <fullName>code_desc__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>code_desc</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>country_cd__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>country_cd</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sfdc_country_desc__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>sfdc_country_desc</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>PDBCountryLookup</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>code_desc__c</columns>
        <columns>country_cd__c</columns>
        <columns>sfdc_country_desc__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>